[package]
name = "todo"
version = "1.21.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
csv = "1.1.6"
serde = { version= "1", features = ["derive"] }
serde_yaml = "0.9.14"
colored = "2.0.0"
